bug squashing

--- a/Dillan_Hart/style.css
+++ b/Dillan_Hart/style.css
@@ -21,13 +21,12 @@ body {
 div.container {
 	align-items: center;
 	align-self: center;
-	background: url('darth-vader.jpg') center top;
-	border-radius: 100%;
+	background: url('backgroundv2.jpg') center top;
 	display: flex;
 	flex-direction: column;
-	min-height: 1000px;
+	min-height: 1080px;
 	justify-content: center;
-	width: 1000px;
+	width: 1920px;
 }
 
 h1 {
